# summer_com_movidius_ros

./: README.md
devel/: .catkin  _setup_util.py  setup.sh
devel/include/pub_rospy/: msg1.h  srv1.h  srv1Request.h  srv1Response.h  total.h
devel/lib/info/: again
devel/lib/pkgconfig/: info.pc  pub_rospy.pc  rospy_test.pc  signal.pc  strategy2019.pc  xbee_ros_info.pc
devel/lib/signal/: sig_info
devel/lib/strategy2019/: strategy2019
devel/lib/xbee_ros_info/: info_test  xbee_receive_info  xbee_send_info
devel/share/info/cmake/: infoConfig.cmake
devel/share/pub_rospy/cmake/: pub_rospy-msg-paths.cmake  pub_rospyConfig.cmake
devel/share/rospy_test/cmake/: rospy_testConfig.cmake
devel/share/signal/cmake/: signalConfig.cmake
devel/share/strategy2019/cmake/: strategy2019Config.cmake
devel/share/xbee_ros_info/cmake/: xbee_ros_infoConfig.cmake
src/info/: CMakeLists.txt
src/info/strategy2019/: package.xml
src/info/strategy2019 -copy/: CMakeLists.txt
src/info/strategy2019 -copy/launch/: core2019.launch
src/info/strategy2019 -copy/src/: Target.h  strategy2019.cpp  strategy2019old.cpp  tools.h
src/info/strategy2019/cfg/: cfg2019.yaml
src/pub_rospy/: CMakeLists.txt
src/pub_rospy/msg/: total.msg
src/pub_rospy/src/: 11.cpp  depth.py  get.cpp  ljytest.py
src/rospy_test/: CMakeLists.txt  package.xml  rs.launch
src/rospy_test/src/: object_detection_demo_yolov3_async (复件).py  restart.py  rs (复件).py  rs (能用).py  rs 8-19.py  rs-8.16.py  rs-8.17.py  rs-fixed.py  rs.py  rs_old_msg.py  talk.py
src/signal/: CMakeLists.txt
src/signal/src/: sig_info.cpp
(+39 files in other folders)
